Last commit before change hsql to mysql

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
 			<version>4.2</version>
 		</dependency>
 		<!--end logging -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.19</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
