--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>pl.bartoszzychal.starterkit.gpw</groupId>
 	<artifactId>gpw</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 
 	<name>GPW_SPRING</name>
 	<description>GPW</description>
@@ -114,6 +114,11 @@
 			<version>5.1.19</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.directory.studio</groupId>
+			<artifactId>org.apache.commons.io</artifactId>
+			<version>2.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
