--- a/src/main/resources/config/jpa.properties
+++ b/src/main/resources/config/jpa.properties
@@ -1,5 +1,6 @@
 hibernate.dialect org.hibernate.dialect.MySQLDialect
 hibernate.show_sql true
 hibernate.format_sql true
-hibernate.hbm2ddl.auto update
+hibernate.hbm2ddl.auto create
+hibernate.hbm2ddl.import_files="/import.sql"
 hibernate.ejb.naming_strategy org.hibernate.cfg.ImprovedNamingStrategy
